deploy/kubernetes/overlays/local/patch-deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voxscore-api
spec:
  replicas: 1
  template:
    spec:
