deploy/kubernetes/overlays/local/patch-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voxscore-frontend
spec:
  replicas: 1
