deploy/kubernetes/overlays/local/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voxscore
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600'
spec:
  ingressClassName: nginx
  rules:
    - host: voxscore.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: voxscore-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voxscore-frontend
                port:
                  number: 80
